<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shopping_items"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:text="@string/cheese"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/cheese"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:text="@string/ham"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/ham"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:text="@string/bread"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/bread"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/crystal"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/crystal"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@android:color/black"
        android:text="@string/sexy_legs"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:text="@string/bicycle"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/bicycle"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:text="@string/soccer_ball"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/soccer_ball"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/fountain_pen"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/pen"
        android:layout_weight="1"/>

</LinearLayout>